# CAMERA-

./: CMakeLists.txt  README.md
common/: SharedFrame.h
feeder/: feeder.py
mfsource/: ClassFactory.cpp  MFSource.cpp  MFSource.h  ModuleRef.h  StealthCamMFSource.def  dllmain.cpp
registrar/: StealthCamVCam.cpp
